--- a/index.html
+++ b/index.html
@@ -2,20 +2,25 @@
 <html>
 <head>
 	<title>Index</title>
+	<!-- Main styling sheet -->
 	<link rel="stylesheet" href="assets/style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Font Awesome -->
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
-<!-- Google Fonts -->
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
-<!-- Bootstrap core CSS -->
-<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
-<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-<!-- Material Design Bootstrap -->
-<link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.0/css/mdb.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+	<!-- Google Fonts -->
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+	<!-- Bootstrap core CSS -->
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
+	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+	<!-- Material Design Bootstrap -->
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.0/css/mdb.min.css" rel="stylesheet">
 </head>
+
 <body>
+
+<!-- This is the main page -->
 <div class="main">
+	<!-- This is header which is consist of 100% screen -->
 	<div class="header">
 		<nav class="navigation navbar navbar-expand-md">
 			<div class="logo">
@@ -39,11 +44,12 @@
 
 			</div>		
 		</div>
+				<!-- Navigation toogle button -->
 		        <button type="button" class="button1 navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
 		   			<i class="fa fa-bars" aria-hidden="true"></i>
 		            <span class="togglenavigation navbar-toggler-icon"></span>
 		        </button>
-
+		        <!-- Navigation bar -->
 		        <div class="collapse navbar-collapse" id="navbarCollapse">
 		            <div class="navbar-nav navigation1" >
 		                <a href="#" class="link1  nav-item nav-link active">For Drivers</a>
@@ -68,13 +74,13 @@
 		<div class="text2">
 			<p>Spruce Box Now’s your new home.</p>
 		</div>
-	
+	<!-- Signup button -->
 			 <div class="signupbutton">
 				<div class="signupfont">
 					SignUp Today
 				</div>
 			</div>
-
+		<!-- car truck and other pic component -->
 		<div class="group">
 			<img class="circle" src="assets/Circle.svg"/>
 			<img class="van" src="assets/Van.svg"/>
@@ -82,9 +88,12 @@
 			<img class="car" src="assets/Car.svg" />
 			<img class="truck" src="assets/Truck.svg" />
 		</div>
-
-
 	</div>	
+	<!--End of Header -->
+
+
+
+	<!-- First Cta Part -->
 	<div class="cta">
 		<div class="manage">
 			<p> Deliver, Concierge & more with us</p>
@@ -93,19 +102,18 @@
 			<p> We believe in making our drivers partners with company stakes <br/> and we’re looking to expand our team.</p>
 		</div>
 	</div>
+	<!-- End Cta Part -->
 
 
+	<!-- First Features Part which is further divided in two coloumns-->
 	<div class="features">
 		<div class="head1">
 		Why drive with Spruce Box Now?
 		</div>
-
 		<div class="para2">
 			We believe in making our drivers partners with company stakes and we’re looking to expand our team.
 		</div>
 		<div class="offer">
-
-
 			<div class="container">
 			<div class="row">
 			<div class="col-lg-6 col-md-6 col-xs-12 col-sm-12 grid1">
@@ -196,11 +204,12 @@
 			</div>	
 			</div>
 			</div>
-
 		</div>
 	</div>
+	<!-- End of features part one -->
 
 
+	<!-- Second Cta Part -->
 	<div class="cta2">
 		<div class="iconsh">
 			<img class="iconsh1" src="assets/sheild2.svg"/>
@@ -218,7 +227,10 @@
 			</div>
 		</div>
 	</div>	
+	<!-- End of second Cta Part -->
 
+
+	<!-- Features asecond Part -->
 	<div class="features2">
 		<div class="f2head">
 			<p>Looking for work? <br/> Join our fleet</p>
@@ -268,7 +280,9 @@
 		</div>
 		</div>
 	</div>
+	<!-- End of features second Part -->
 
+	<!-- Third Cta Part -->
 	<div class="cta3">
 		<p class="cta3head">Please Note: All Spruce Box Team Members must pass a mandatory background check.</p>
 		<p class="cta3para">Please see our Frequently Asked Questions for more information. </p>
@@ -278,8 +292,10 @@
 				</div>
 			</div>
 	</div>
+	<!-- End of third Cta Part -->
 
 
+	<!-- Frame Part -->
 	<div class="frame">
 		<div class="framehead">
 			We are a values-driven business dedicated to scalability, sustainability, and a cooperative-ownership.
@@ -339,13 +355,14 @@
 		</div>
 
 	</div>	
+	<!-- End of Frame Part -->
 
 
 
 
 
 
-
+	<!-- questions part slider animation slider/ courosel not been made yet -->
 	<div class="questions">
 		<div class="questionhead">
 			But Spruce Box How?
@@ -388,6 +405,7 @@
 			</div>
 		</div>
 	</div>
+	<!-- End of questions Part -->
 
 
 
@@ -402,8 +420,7 @@
 
 
 
-
-
+	<!-- Fourth Cta Part -->
 	<div class="cta4">
 		<div class="cta4head">
 			We are also offering 10,000 companies shares available for purchase. 
@@ -426,7 +443,10 @@
 			</div>
 		</div>
 	</div>
+	<!-- End of Fourth Cta Part -->
 
+
+	<!-- Download Cta Part -->
 	<div class="downloadcta">
 		<div class="downloadhead">
 			Ready to give<br/>
@@ -446,7 +466,11 @@
 			<img class="contactus" src="assets/contact.png"/>
 		</div>
 	</div>
-	
+	<!-- End of Download Cta Part -->
+
+
+
+	<!-- footer -->
 	<div class="footer">
 		<div class="logo1">
 			<div class="icon1">
@@ -480,10 +504,6 @@
 		<div class="address">
 			9033 SW Burnham St, Portland, Oregon 97223
 		</div>
-		
-
-
-
 
 		<div class="discover">
 			<div class="dhead">
@@ -523,28 +543,25 @@
 		</div>		
 		<p class="copy">Copyright © 2020 Spruce Box Delivery, Inc. All rights reserved.</p>
 	</div>
+	<!-- End of footer -->
 
 </div>
+<!-- End of main -->
 
 
 
 
-
-
-
-
-
-
+	<!-- all nesscory scripts -->
 	<script type="text/javascript" src="assets/main.js"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js" integrity="sha384-1CmrxMRARb6aLqgBO7yyAxTOQE2AKb9GfXnEo760AUcUmFx3ibVJJAzGytlQcNXd" crossorigin="anonymous"></script>
 	<!-- JQuery -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<!-- Bootstrap tooltips -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
-<!-- Bootstrap core JavaScript -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
-<!-- MDB core JavaScript -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.0/js/mdb.min.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<!-- Bootstrap tooltips -->
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
+	<!-- Bootstrap core JavaScript -->
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+	<!-- MDB core JavaScript -->
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.0/js/mdb.min.js"></script>
 </body>
 </html>
