--- a/index.html
+++ b/index.html
@@ -59,11 +59,13 @@
 		                <a href="#" class="link4  nav-item nav-link">ContactUs</a>
 		            </div>
 		            <div class="navbar-nav ml-auto">
-		               <div class="downloadbtn">
+		        
+		               <a class="downloadbtn" href="#">
 							<div class="headfont">
 								Download Now
 							</div>
-						</div>
+						</a>
+
 		            </div>
 		        </div>
 		</nav>
@@ -75,11 +77,11 @@
 			<p>Spruce Box Now’s your new home.</p>
 		</div>
 	<!-- Signup button -->
-			 <div class="signupbutton">
+			 <a href="#!" class="signupbutton" >
 				<div class="signupfont">
 					SignUp Today
 				</div>
-			</div>
+			</a>
 		<!-- car truck and other pic component -->
 		<div class="group">
 			<img class="circle" src="assets/Circle.svg"/>
@@ -221,11 +223,11 @@
 		<div class="cta2para">
 			100% of tips are passed to drivers and concierge members.  
 		</div>
-		<div class="cta2btn">
+		<a href="#!" class="cta2btn">
 			<div class="cta2text">
 				See Our Member-Owner Benefits for More Information
 			</div>
-		</div>
+		</a>
 	</div>	
 	<!-- End of second Cta Part -->
 
@@ -272,11 +274,11 @@
 				</div>
 			</div>
 			<div >
-			<div class="areatextbtn">
+			<a href="#!" class="areatextbtn">
 				<div class="areatextfont"> 
 					Click here for more information about qualifying vehicles. 
 				</div>
-			</div>
+			</a>
 		</div>
 		</div>
 	</div>
@@ -286,11 +288,11 @@
 	<div class="cta3">
 		<p class="cta3head">Please Note: All Spruce Box Team Members must pass a mandatory background check.</p>
 		<p class="cta3para">Please see our Frequently Asked Questions for more information. </p>
-			<div class="cta3button">
+			<a href="#!" class="cta3button">
 				<div class="cta3font">
 					Learn More
 				</div>
-			</div>
+			</a>
 	</div>
 	<!-- End of third Cta Part -->
 
@@ -399,11 +401,11 @@
 					</div>
 				</div>
 			</div>
-		<div class="helpbtn">
+		<a href="#!" class="helpbtn">
 			<div class="buttontxt">
 				Help Center
 			</div>
-		</div>
+		</a>
 	</div>
 	<!-- End of questions Part -->
 
@@ -431,16 +433,16 @@
 			To acquire your Spruce Box share click on the one of the buttons bellow. 
 		</div>
 		<div>
-			<div class="button1cta4">
+			<a href="#!" class="button1cta4">
 				<div class="cta4font1">
 					Apply to Join the Team
 				</div>
-			</div>
-			<div class="button2cta4">
+			</a>
+			<a href="#!" class="button2cta4">
 				<div class="cta4font2">
 					Already a Spruce Box Member-Owner?
 				</div>
-			</div>
+			</a>
 		</div>
 	</div>
 	<!-- End of Fourth Cta Part -->
@@ -455,11 +457,11 @@
 		<div class="downloadpara">
 			Get access to nationwide inventory from all major suppliers and real-time shipment monitoring now.
 		</div>
-		<div class="btndownload">
+		<a href="#!" class="btndownload">
 			<div class="downloadfont">
 				Get started Now
 			</div>
-		</div>
+		</a>
 
 		<div>
 			<p class="contacttext">Or Contact Us</p>
