--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 		</div>
 	<!-- Signup button -->
 			 <a href="#!" class="signupbutton" >
-				<div class="signupfont">
+				<div align="center" class="signupfont">
 					SignUp Today
 				</div>
 			</a>
