--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 							Drivers as Business Partners 
 						</div>
 						<div class="s3para">
-							As a B-Certified Corporation, we’re dedicated to improving our local community and empowering our drivers and partners to be their best.  We are offering  member-ownership for drivers and exclusive in-network offers to drivers to help them  stay safe at a discount.  Read more about Our Member-Ownership Program.
+							As a B-Certified Corporation, we’re dedicated to improving our local community and empowering our drivers and partners to be their best.  We are offering  member-ownership for drivers and exclusive in-network offers to drivers to help them  stay safe at a discount.  Read more about <span> <a href="#!" style="color: blue;"><b><u>Our Member-Ownership Program.</u></b></a></span>
 						</div>
 					</div>	
 
